--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/mojo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="MojoCode - Build. Cool. Shit!" />
+    <meta name="keywords" content="AI, web development, website builder, MojoCode, artificial intelligence, code generation" />
+    <meta property="og:title" content="MojoCode - Build. Cool. Shit." />
+    <meta property="og:description" content="Brainstorm, Test and Deploy like a someone who knows what he is doing" />
+    <meta property="og:image" content="/mojo.jpg" />
+    <title>MojoCode - Build. Cool. Shit!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/777b2acad6.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
